variables.RunFour.scala.error
Erreur de compilation :
RunFour:8: error: not found: value cookie
while (!cookie=4) {
        ^